--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,8 @@
 body {
   background: #F5F5FF;
   font-family: Lato, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 button {
